# Fluxed

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
src/Fluxed/: distributions.py  shapes.py
tests/: test.py
