[project]
name = "Fluxed"
description = "A Python library for simulating and analyzing fluxes in complex systems."
authors = [{name = "Rishabh Garg", email = "rishabh@rishabhgarg.dev"}]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = [
    "setuptools>=61.2.0",
    "wheel"
]
build-backend = "setuptools.build_meta"